--- a/app/views/welcome/status.html.slim
+++ b/app/views/welcome/status.html.slim
@@ -21,7 +21,7 @@ div id="network_status"
 
   h1 Network Status
   p Locations are approximated based on registered client IP address.
-  table
+  table.table.table-condensed.table-striped
     thead
       tr
         th Peer
