--- a/app/views/feeds/show.xml.slim
+++ b/app/views/feeds/show.xml.slim
@@ -16,7 +16,7 @@ rss version="2.0"
         title
           = t.name
         description 
-          = t.name + " uploaded by " + t.user.to_s + " on " + t.created_at.strftime("%A, %B %d, %Y at %T:%M%p")  + ". Tags: " + t.tag_list.join(",")
+          = t.name + " uploaded by " + t.user.to_s + " on " + t.created_at.strftime("%A, %B %d, %Y at %T:%M%p")  + '.'
         link
           = torrent_url(t, :format => :torrent, :host => request_host_or_default, :protocol => 'https')
         enclosure url="#{torrent_url(t, :format => :torrent, :host => request_host_or_default, :protocol => 'https')}" type="application/x-bittorrent"
