--- a/app/views/layouts/_navigation.html.slim
+++ b/app/views/layouts/_navigation.html.slim
@@ -57,6 +57,6 @@ header.navbar.navbar-default role="banner"
           = link_to 'Login', new_user_session_path
 
     / -if params[:action] == 'dashboard'            
-    form.navbar-form.navbar-right#search_form role="search"
+    / form.navbar-form.navbar-right#search_form role="search"
       .form-group
         input.form-control id="search_query" placeholder="search"
