--- a/app/views/welcome/_dashboard_feed_torrents.html.slim
+++ b/app/views/welcome/_dashboard_feed_torrents.html.slim
@@ -1,47 +1,43 @@
 
 p Torrents for the selected feed are shown, below.
 .btn-group
-  -if can? :create, Torrent
-    button.btn.btn-primary.disabled href="#upload_torrent_dialog" role="button" data-toggle="modal" Publish a torrent.
+	-if can? :create, Torrent
+		button.btn.btn-primary.disabled href="#upload_torrent_dialog" role="button" data-toggle="modal" Publish a torrent.
 
 table.table.table-condensed.table-striped#feed_torrents
-  thead
-    tr
-      th.sorting Name
-      th.sorting Published By
-      th.sorting Seeds
-      th.sorting Peers
-      th.sorting Size
-      th Actions
-  tbody
-    / = render :partial => 'torrent_feed', :locals => {:torrents => (@selected_feed.torrents rescue [])}
-    =render :partial => 'welcome/torrent', :collection => @feed.torrents
+	thead
+		tr
+			th.sorting Name
+			th.sorting Published By
+			th.sorting Seeds
+			th.sorting Peers
+			th.sorting Size
+			th Actions
+	tbody
+		/ = render :partial => 'torrent_feed', :locals => {:torrents => (@selected_feed.torrents rescue [])}
+		=render :partial => 'welcome/torrent', :collection => @feed.torrents
 
 =form_for Torrent.new do |f|
 
-  .modal.fade#upload_torrent_dialog
-    .modal-content
-      .modal-header
-        button type="button" class="close" data-dismiss="modal" aria-hidden="true" &times;
-        h3 Publish a torrent.
-      .modal-body
-        div class="field"
-          = f.hidden_field :user_id, :value => current_user.id
-          = f.hidden_field :feed_id
-          = f.label :name
-          p class="muted" Human-readable name for the torrent.
-          = f.text_field :name, placeholder: 'Demo Package X', required: false
-        div class="field"
-          = f.label :permalink
-          p class="muted" 
-            | Optional human-readable portion of the torrent's URL.
-          = f.text_field :slug, placeholder: 'demo_package_x', required: false
-        div class="field"
-          = f.label :tags
-          p class="muted" Comma-separated list of freeform tags. Try to stick to lowercase  alphanumerics to make searching easier for     your subscribers.
-          = f.text_field :tag_list, :class => "torrent_tags", required: true
-        div class="field"
-          = f.file_field :torrent_file, required: true
-      .modal-footer
-        a href="#" class="btn" data-dismiss="modal" Nevemind
-        = f.submit "Publish", :class => 'btn btn-primary', :id => 'publish_btn', :data => {:' loading-text' => 'Saving..'} 
+	.modal.fade#upload_torrent_dialog
+		.modal-dialog
+			.modal-content
+				.modal-header
+					button type="button" class="close" data-dismiss="modal" aria-hidden="true" &times;
+					h3 Publish a torrent.
+				.modal-body
+					.form-group
+						= f.hidden_field :feed_id
+						= f.label :name
+						= f.text_field :name, placeholder: 'Demo Package X', required: true, class: 'form-control'
+						p.help-block Human-readable name for the torrent. You probably want to use the same name used when creating the .torrent to avoid confusion.
+					.form-group
+						= f.label :torrent_file
+						= f.file_field :torrent_file, required: true
+						p.help-block Upload a .torrent file from your computer.
+					.modal-footer
+					a href="#" class="btn" data-dismiss="modal" Nevemind
+					= f.submit "Publish", :class => 'btn btn-primary', :id => 'publish_btn', :data => {:' loading-text' => 'Saving..'}  
+
+
+
