--- a/app/views/welcome/_torrent.html.slim
+++ b/app/views/welcome/_torrent.html.slim
@@ -7,10 +7,10 @@ tr class='torrent_link' id="torrent_#{torrent.id}" data-id="#{torrent.id}" data-
   td
   	p class="lead"
 	 	= torrent.peer_count
+  td = number_to_human_size(torrent.size, precision: 3)
   td
-	= torrent.size
-  td
-    = link_to "<i class='icon-download icon-white'/> Download".html_safe, torrent.torrent_file.url(:bt), :class => 'btn btn-success'
-    - if can? :manage, torrent
-      = link_to '<i class="icon-edit icon-white"></i> Edit'.html_safe, edit_torrent_path(torrent), 'class' => "btn btn-warning"
-      = link_to "<i class='icon-trash icon-white'/> Delete".html_safe, torrent, :class => 'btn btn-danger', :confirm => 'Are you sure you want to delete this torrent?', :method => :delete
+    .btn-group
+      = link_to text_with_icon('Download', 'download'), torrent_path(torrent, format: :torrent), :class => 'btn btn-success'
+      - if can? :manage, torrent
+        = link_to text_with_icon('Edit', 'edit'), edit_torrent_path(torrent), 'class' => "btn btn-warning"
+        = link_to text_with_icon('Delete', 'trash'), torrent, :class => 'btn btn-danger', :confirm => 'Are you sure you want to delete this torrent?', :method => :delete
