Ditching HTTP Basic Auth in favor of URL tokens; fixing much of the dashboard and Google maps integration; documentation updates; general refactoring.

--- a/app/views/layouts/_disqus.html.slim
+++ b/app/views/layouts/_disqus.html.slim
@@ -1,7 +1,7 @@
 javascript:
     var disqus_shortname = 'bittorious';
-    var disqus_identifier = '#{Rails.env}#{resource.id}';
-    var disqus_url = '#{dashboard_url()}#!#{resource.slug}';
+    var disqus_identifier = '#{Rails.env}_#{resource.id}';
+    var disqus_url = '#{dashboard_url}#!#{resource.slug}';
     var disqus_title = '#{resource.name}';
 javascript:
     /* * * DON'T EDIT BELOW THIS LINE * * */
