--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -10,7 +10,7 @@ html
     = stylesheet_link_tag    "application", :media => "all"
     = javascript_include_tag "application"
     / Add Google Maps APP support.
-    script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDXBBZ0-jdT4ZL5V3cK3Cu2SRuwS4Je1lY&sensor=false"
+    script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCPaue3svO2VOPGOwEcAGZjzcquHonsl7E&sensor=true"
     = csrf_meta_tags
     = yield(:head)
     = yield(:javascripts)
