--- a/app/views/welcome/dashboard.html.slim
+++ b/app/views/welcome/dashboard.html.slim
@@ -55,13 +55,10 @@
       / Replaced via AJAX on feed selection.
 
 
+  .row
+    .col-md-12#torrent_details
+      / Replacede via AJAX on torrent selection.
 
-  #torrent_details_container
-    #torrent_details
-    .row#disqus
-      .col-md-1
-        | &nbsp;
-      .col-md-10
-        #disqus_thread
-      .col-md-1
-        | &nbsp;
+  .row#disqus
+    .col-md-12
+      #disqus_thread
