--- a/app/views/welcome/status.html.slim
+++ b/app/views/welcome/status.html.slim
@@ -3,7 +3,7 @@
     
 div id="network_status"
 
-  = render partial: 'layouts/google_map'
+  #map_canvas
 
   javascript:  
     // Initialize the map.
