--- a/app/views/layouts/_messages.html.slim
+++ b/app/views/layouts/_messages.html.slim
@@ -1,6 +1,6 @@
 - flash.each do |name, msg|
 	- if msg.is_a?(String)
-		div class="alert alert-#{name == :notice ? 'success' : 'danger'}"
+		div class="alert alert-#{name == 'notice' ? 'success' : 'danger'}"
 			button.close type="button" data-dismiss="alert" aria-hidden="true" &times;
 			= content_tag :div, msg, :id => "flash_#{name}"
 		
