Mailer and admin account management fixes.

--- a/app/views/admin_mailer/deny_application.html.slim
+++ b/app/views/admin_mailer/deny_application.html.slim
@@ -1,6 +1,6 @@
 doctype html
 html
   body
-    | We are sorry to inform you that your application to Bittorious has been denied
+    | We are sorry to inform you that your account application to BitTorious has been denied.
     br
-    | If you believe this was in error please email us at accounts@Bittorious.com
+    | Bummer. :(
