--- a/app/views/admin_mailer/new_user_waiting_for_approval.html.slim
+++ b/app/views/admin_mailer/new_user_waiting_for_approval.html.slim
@@ -2,5 +2,5 @@ doctype html
 html
   body
     | 
-      A new user has registered for Bittorious with the email #{@user.email}
-      Please login to approve user at http://www.Bittorious.com/admin
+      A new user has registered for BitTorious with the email #{@user.email}.
+      It's not polite to keep people waiting, so please log in and approve them!
