--- a/app/views/welcome/getting_started.html.slim
+++ b/app/views/welcome/getting_started.html.slim
@@ -3,7 +3,7 @@
 	.row
 		.col-md-12
 			h1 Getting Started
-			p BitTorious may eventually accept any BitTorrent client that supports HTTP proxies but currently uTorrent is the only officially supported client. For this reason we will use uTorrent for the examples in this tutorial. A free version of uTorrent is available at <a href=http://www.utorrent.com>utorrent.com</a>. Please note that the sample screenshots were made using the uTorrent client for Mac and consequently may look a little different for Windows users.
+			p BitTorious supports several BitTorrent client. More may work, but it's imperative that your choosen client respects the "private" nature of torrents, as well as supports encryption of P2P file transfers. For this reason we recommend uTorrent, with Vuze as a fall-back option. We'll use uTorrent for the examples in this tutorial. A free version of uTorrent is available at <a href=http://www.utorrent.com>utorrent.com</a>. Please note that the sample screenshots were made using the uTorrent client for Mac and consequently may look a little different for Windows and Linux users.
 
 
 			ul
@@ -57,7 +57,7 @@ ol
 h4 Subscribing
 p BitTorrious makes it possible to subscribe to feeds via RSS.
 ol
-	li In a browser, navigate to https://uat.bittorious.com and login with your BitTorrious credentials, then click on "Dashboard" in the BitTorious menu bar and find the feed to which you wish to subscribe.
+	li Log in to BitTorious and navigate to the "Dashboard". in the BitTorious menu bar and find the feed to which you wish to subscribe.
 	= image_tag 'Bittorious_Feeds.png'
 	li Click the green "RSS" button for the feed: you will be presented with a popup. Copy the URL in the popup then click the "Got it" button.
 	= image_tag 'Bittorious_RSS_URL.png'
