--- a/app/views/feeds/show.html.slim
+++ b/app/views/feeds/show.html.slim
@@ -4,14 +4,12 @@
       a href="#torrents" data-toggle="tab"
         span.icon.icon-copy
         |  Torrents
-    li
-      a href="#map" data-toggle="tab"
-        span.icon.icon-globe
-        |  Activity Map
-    li
-      a href="#permissions" data-toggle="tab" 
-        span.icon.icon-group
-        |  Permissions
+
+    - if can? :grant, @feed
+      li
+        a href="#permissions" data-toggle="tab" 
+          span.icon.icon-group
+          |  Permissions
     li
       a href="#settings" data-toggle="tab"
         span.icon.icon-gear
@@ -20,8 +18,8 @@
   
   .tab-content
     .tab-pane.active#torrents = render partial: 'welcome/dashboard_feed_torrents'
-    .tab-pane#map
-    .tab-pane#permissions = render partial: 'welcome/dashboard_feed_permissions'
+    - if can? :grant, @feed
+      .tab-pane#permissions = render partial: 'welcome/dashboard_feed_permissions'
     .tab-pane#settings = render partial: 'welcome/dashboard_feed_settings'
   
   
