--- a/app/views/feeds/show.xml.slim
+++ b/app/views/feeds/show.xml.slim
@@ -21,6 +21,6 @@ rss version="2.0"
           = torrent_url(t, :format => :torrent, :host => request_host_or_default, :protocol => 'https')
         enclosure url="#{torrent_url(t, :format => :torrent, :host => request_host_or_default, :protocol => 'https')}" type="application/x-bittorrent"
         guid
-          = t.private_info_hash
+          = t.info_hash
         pubDate
           = t.created_at
