--- a/app/assets/stylesheets/dashboard.css.scss
+++ b/app/assets/stylesheets/dashboard.css.scss
@@ -49,11 +49,13 @@
 		// padding: 20px;
 		// border-bottom-left-radius: 10px;
 		// border-bottom-right-radius: 10px;
-		#torrent_details {
+		#torrent_details section {
 			background: image-url('textures/tileable_wood_texture/tileable_wood_texture.png') repeat;
 				// background: image-url('textures/xv/xv.png') repeat;
-				box-shadow: 0 20px 20px #333 inset, 0 0px 2px #fff;
-				// border-radius: 10px;
+				// box-shadow: 0 20px 20px #333 inset, 0 0px 2px #fff;
+				box-shadow: 0 20px 20px #333;
+				border-radius: 2px;
+				border: 1px solid #ccc;
 				margin: 20px 0;
 				padding: 20px;
 		}
