--- a/app/views/torrents/show.html.slim
+++ b/app/views/torrents/show.html.slim
@@ -1,6 +1,6 @@
 - if resource.peers.active.count > 0
 
-  .col-md-6
+  section.col-md-6
     h3 Active Peers
     table.table.table-condensed.table-striped
       thead
@@ -24,7 +24,7 @@
                 = time_ago_in_words peer.updated_at
                 |  ago
 
-  .col-md-6
+  section.col-md-6
     h3 Node Map
     div#map_canvas
     javascript:  
