--- a/app/views/layouts/_navigation.html.slim
+++ b/app/views/layouts/_navigation.html.slim
@@ -24,9 +24,9 @@ header.navbar.navbar-default role="banner"
           | Learn
           b.caret
         ul.dropdown-menu role="menu"
+            li = link_to 'Getting Started Guide', getting_started_path
             li = link_to 'System Concepts', concepts_path
             li = link_to 'Deployment Options', deployment_path
-            li = link_to 'Publishing Tutorial', getting_started_path
             li = link_to 'FAQ', faq_path
             li class="divider"
             li = link_to 'Legal', legal_path
