Documentation updates, CSS fixes, and general improvements.

--- a/app/views/torrents/show.html.slim
+++ b/app/views/torrents/show.html.slim
@@ -1,6 +1,6 @@
 - if resource.peers.active.count > 0
 
-  section.col-md-6
+  section.col-md-6#active_peers
     h3 Active Peers
     table.table.table-condensed.table-striped
       thead
