--- a/app/assets/stylesheets/dashboard.css.scss
+++ b/app/assets/stylesheets/dashboard.css.scss
@@ -44,33 +44,23 @@
 		} 
 	}
 
-	// #torrent_details_container {
-		// margin: 40px -20px -20px -20px;
+
+	#torrent_details #active_peers {
+		background: image-url('textures/tileable_wood_texture/tileable_wood_texture.png') repeat;
+		// background: image-url('textures/xv/xv.png') repeat;
+		// box-shadow: 0 20px 20px #333 inset, 0 0px 2px #fff;
+		box-shadow: 0 20px 20px #333;
+		border-radius: 2px;
+		border: 1px solid #ccc;
+		// margin: 20px 0;
 		// padding: 20px;
-		// border-bottom-left-radius: 10px;
-		// border-bottom-right-radius: 10px;
-		#torrent_details section {
-			background: image-url('textures/tileable_wood_texture/tileable_wood_texture.png') repeat;
-				// background: image-url('textures/xv/xv.png') repeat;
-				// box-shadow: 0 20px 20px #333 inset, 0 0px 2px #fff;
-				box-shadow: 0 20px 20px #333;
-				border-radius: 2px;
-				border: 1px solid #ccc;
-				margin: 20px 0;
-				padding: 20px;
-		}
-		#map_canvas {
-				height: 400px;
-				margin: 20px;
-				padding: 20px;
-				box-shadow: 0 20px 20px #333, 0 0px 2px #fff inset;
-		}
-		// #disqus {
-		// 	 display: none;
-		// 	 margin: 20px;
-		// 	 padding: 20px;
-		// 	 box-shadow: 0 20px 20px #333, 0 0px 2px #fff inset;
-		// 	 border-radius: 10px;
-		// }
-	// }
+	}
+
+	#map_canvas {
+			height: 400px;
+			margin: 20px;
+			padding: 20px;
+			box-shadow: 0 20px 20px #333, 0 0px 2px #fff inset;
+	}
+
 }
