--- a/app/views/torrents/show.html.slim
+++ b/app/views/torrents/show.html.slim
@@ -41,9 +41,8 @@
   .lead Time to make some friends?
 
 javascript:
-    var disqus_shortname = 'bittorious';
-    var disqus_identifier = '#{Rails.env}_#{resource.id}';
-    var disqus_category_id = '#{resource.feed.id}';
+    var disqus_shortname = 'BitTorious';
+    var disqus_identifier = '#{torrent_url(resource)}';
     var disqus_title = '#{resource.name}';
 javascript:
     /* * * DON'T EDIT BELOW THIS LINE * * */
