--- a/app/assets/stylesheets/dashboard.css.scss
+++ b/app/assets/stylesheets/dashboard.css.scss
@@ -45,7 +45,7 @@
 	}
 
 
-	#torrent_details #active_peers {
+	#torrent_details #active_peers table {
 		background: image-url('textures/tileable_wood_texture/tileable_wood_texture.png') repeat;
 		// background: image-url('textures/xv/xv.png') repeat;
 		// box-shadow: 0 20px 20px #333 inset, 0 0px 2px #fff;
