--- a/app/views/torrents/show.html.slim
+++ b/app/views/torrents/show.html.slim
@@ -2,27 +2,28 @@
 
   section.col-md-6#active_peers
     h3 Active Peers
-    table.table.table-condensed.table-striped
-      thead
-        tr
-          th IPv4
-          th Port
-          th State
-          th Needs
-          th Uploaded
-          th Last Registered
-      tbody
-        - resource.peers.active.each do |peer|
-          tr class="peer" data-ipv4_address="#{peer.ip}" data-latitude="#{peer.latitude}" data-longitude="#{peer.longitude}"
-            tr
-              td = peer.ip
-              td = peer.port
-              td = peer.left > 0 ? 'Peer' : 'Seeding'
-              td = number_to_human_size(peer.left, precision: 3)
-              td = number_to_human_size(peer.uploaded, precision: 3)
-              td
-                = time_ago_in_words peer.updated_at
-                |  ago
+    #table_container
+      table.table.table-condensed.table-striped
+        thead
+          tr
+            th IPv4
+            th Port
+            th State
+            th Needs
+            th Uploaded
+            th Last Registered
+        tbody
+          - resource.peers.active.each do |peer|
+            tr class="peer" data-ipv4_address="#{peer.ip}" data-latitude="#{peer.latitude}" data-longitude="#{peer.longitude}"
+              tr
+                td = peer.ip
+                td = peer.port
+                td = peer.left > 0 ? 'Peer' : 'Seeding'
+                td = number_to_human_size(peer.left, precision: 3)
+                td = number_to_human_size(peer.uploaded, precision: 3)
+                td
+                  = time_ago_in_words peer.updated_at
+                  |  ago
 
   section.col-md-6
     h3 Node Map
